@@ -528,6 +528,15 @@ module Array = struct
   let fast_sort = stable_sort
 
   (* duplicated from array.ml *)
+  let shuffle ~rand a = (* Fisher-Yates *)
+    for i = length a - 1 downto 1 do
+      let j = rand (i + 1) in
+      let v = unsafe_get a i in
+      unsafe_set a i (get a j);
+      unsafe_set a j v
+    done
+
+  (* duplicated from array.ml *)
   let to_seq a =
     let rec aux i () =
       if i < length a
