@@ -580,7 +580,7 @@ module Array : sig
       @raise Invalid_argument if the length of [l] is greater than
       [Sys.max_floatarray_length].*)
 
-  (** {2 Iterators} *)
+  (** {1 Iterators} *)
 
   val iter : (float -> unit) -> t -> unit
   (** [iter f a] applies function [f] in turn to all
@@ -621,7 +621,7 @@ module Array : sig
       [f a.(0) (f a.(1) ( ... (f a.(n-1) init) ...))],
       where [n] is the length of the floatarray [a]. *)
 
-  (** {2 Iterators on two arrays} *)
+  (** {1 Iterators on two arrays} *)
 
   val iter2 : (float -> float -> unit) -> t -> t -> unit
   (** [Array.iter2 f a b] applies function [f] to all the elements of [a]
@@ -634,7 +634,7 @@ module Array : sig
       [[| f a.(0) b.(0); ...; f a.(length a - 1) b.(length b - 1)|]].
       @raise Invalid_argument if the floatarrays are not the same size. *)
 
-  (** {2 Array scanning} *)
+  (** {1 Array scanning} *)
 
   val for_all : (float -> bool) -> t -> bool
   (** [for_all f [|a1; ...; an|]] checks if all elements of the floatarray
@@ -654,7 +654,7 @@ module Array : sig
   val mem_ieee : float -> t -> bool
   (** Same as {!mem}, but uses IEEE equality instead of structural equality. *)
 
-  (** {2 Array searching} *)
+  (** {1 Array searching} *)
 
   val find_opt : (float -> bool) -> t -> float option
   (* [find_opt f a] returns the first element of the array [a] that satisfies
@@ -682,7 +682,7 @@ module Array : sig
 
      @since 5.1 *)
 
-  (** {2 Sorting} *)
+  (** {1:sorting_and_shuffling Sorting and shuffling} *)
 
   val sort : (float -> float -> int) -> t -> unit
   (** Sort a floatarray in increasing order according to a comparison
@@ -722,7 +722,19 @@ module Array : sig
   (** Same as {!sort} or {!stable_sort}, whichever is faster
       on typical input. *)
 
-  (** {2 Float arrays and Sequences} *)
+  val shuffle :
+    rand: (* thwart tools/sync_stdlib_docs *) (int -> int) -> t -> unit
+  (** [shuffle rand a] randomly permutes [a]'s elements using [rand]
+      for randomness. The distribution of permutations is uniform.
+
+      [rand] must be such that a call to [rand n] returns a uniformly
+      distributed random number in the range \[[0];[n-1]\].
+      {!Random.int} can be used for this (do not forget to
+      {{!Random.self_init}initialize} the generator).
+
+      @since 5.2 *)
+
+  (** {1 Float arrays and Sequences} *)
 
   val to_seq : t -> float Seq.t
   (** Iterate on the floatarray, in increasing order. Modifications of the
@@ -822,7 +834,7 @@ module Array : sig
 
   (**/**)
 
-  (** {2 Undocumented functions} *)
+  (** {1 Undocumented functions} *)
 
   (* These functions are for system use only. Do not call directly. *)
   external unsafe_get : t -> int -> float = "%floatarray_unsafe_get"
@@ -914,7 +926,7 @@ module ArrayLabels : sig
       @raise Invalid_argument if the length of [l] is greater than
       [Sys.max_floatarray_length].*)
 
-  (** {2 Iterators} *)
+  (** {1 Iterators} *)
 
   val iter : f:(float -> unit) -> t -> unit
   (** [iter ~f a] applies function [f] in turn to all
@@ -955,7 +967,7 @@ module ArrayLabels : sig
       [f a.(0) (f a.(1) ( ... (f a.(n-1) init) ...))],
       where [n] is the length of the floatarray [a]. *)
 
-  (** {2 Iterators on two arrays} *)
+  (** {1 Iterators on two arrays} *)
 
   val iter2 : f:(float -> float -> unit) -> t -> t -> unit
   (** [Array.iter2 ~f a b] applies function [f] to all the elements of [a]
@@ -968,7 +980,7 @@ module ArrayLabels : sig
       [[| f a.(0) b.(0); ...; f a.(length a - 1) b.(length b - 1)|]].
       @raise Invalid_argument if the floatarrays are not the same size. *)
 
-  (** {2 Array scanning} *)
+  (** {1 Array scanning} *)
 
   val for_all : f:(float -> bool) -> t -> bool
   (** [for_all ~f [|a1; ...; an|]] checks if all elements of the floatarray
@@ -988,7 +1000,7 @@ module ArrayLabels : sig
   val mem_ieee : float -> set:t -> bool
   (** Same as {!mem}, but uses IEEE equality instead of structural equality. *)
 
-  (** {2 Array searching} *)
+  (** {1 Array searching} *)
 
   val find_opt : f:(float -> bool) -> t -> float option
   (* [find_opt ~f a] returns the first element of the array [a] that satisfies
@@ -1016,7 +1028,7 @@ module ArrayLabels : sig
 
      @since 5.1 *)
 
-  (** {2 Sorting} *)
+  (** {1:sorting_and_shuffling Sorting and shuffling} *)
 
   val sort : cmp:(float -> float -> int) -> t -> unit
   (** Sort a floatarray in increasing order according to a comparison
@@ -1056,7 +1068,19 @@ module ArrayLabels : sig
   (** Same as {!sort} or {!stable_sort}, whichever is faster
       on typical input. *)
 
-  (** {2 Float arrays and Sequences} *)
+  val shuffle :
+    rand: (* thwart tools/sync_stdlib_docs *) (int -> int) -> t -> unit
+  (** [shuffle ~rand a] randomly permutes [a]'s elements using [rand]
+      for randomness. The distribution of permutations is uniform.
+
+      [rand] must be such that a call to [rand n] returns a uniformly
+      distributed random number in the range \[[0];[n-1]\].
+      {!Random.int} can be used for this (do not forget to
+      {{!Random.self_init}initialize} the generator).
+
+      @since 5.2 *)
+
+  (** {1 Float arrays and Sequences} *)
 
   val to_seq : t -> float Seq.t
   (** Iterate on the floatarray, in increasing order. Modifications of the
@@ -1156,7 +1180,7 @@ module ArrayLabels : sig
 
   (**/**)
 
-  (** {2 Undocumented functions} *)
+  (** {1 Undocumented functions} *)
 
   (* These functions are for system use only. Do not call directly. *)
   external unsafe_get : t -> int -> float = "%floatarray_unsafe_get"
